<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- Put form controls here -->

        <EditText
            android:id="@+id/EditSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_subject"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/EditQuestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_question"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/EditAnswer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_answer"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

</ScrollView>